--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
       <div id="messagePanel"></div>
 
   </div>
-  <script src="./dist/main.js"></script>
+  <script src="./public/bundle.js"></script>
 </body>
 </html>
