added css and scss loaders

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <title>Hello Webpack</title>
   <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css"/>
 <body>
-  <div class="container">
-      <h1>Hello Webpack</h1>
+  <div id="app" class="container">
+    <h1>Hello Webpack</h1>
 
-      <div id="messagePanel"></div>
+    <h2>Section 1. Babel Loader</h2>
+    <div id="appMsgPanel" class="alert alert-primary"></div>
 
   </div>
   <script src="./public/bundle.js"></script>
