--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div id="appMsgPanel" class="alert alert-primary"></div>
 
   </div>
-  <script src="./public/bundle.js"></script>
+  <script src="./bundle.js"></script>
 </body>
 </html>
